--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,12 @@ dist.jar=${dist.dir}/GameFramework.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jl1.0.1.jar=C:\\Users\\GOD\\Desktop\\New folder\\JLayer1.0.1\\jl1.0.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jl1.0.1.jar}
+    ${libs.jlayer.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
