--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jlayer.classpath}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
